Add TLS support; Move grpc server directory
